#+TITLE: Change Log

All notable changes to this project will be documented in this file.

The format is based on [[http://keepachangelog.com][Keep a Changelog]] and this project adheres to [[http://semver.org][Semantic Versioning]].

** [[https://github.com/sergeyklay/bnf-mode/compare/0.1.0...HEAD][Unreleased]]

** 0.1.0 - 2019-03-16
*** Added
 - Initial stable release