@@ -8,9 +8,15 @@ A GNU Emacs major mode for editing BNF grammars.
 Currently provides basic syntax and font-locking for BNF files.
 EBNF and ABNF are in my plans for the near future.
 
+When developing this mode, the following RFCs were taken into account:
+
+- [[https://www.ietf.org/rfc/rfc822.txt][RFC822]]: Standard for ARPA Internet Text Messages
+- [[https://www.ietf.org/rfc/rfc5234.txt][RFC5234]]: Augmented BNF for Syntax Specifications: ABNF
+
 ** Features
 
-1. Syntax highlighting
+- Basic syntax definition
+- Syntax highlighting
 
 ** Installation
 
@@ -74,8 +80,8 @@ To see what has changed in recent versions of BNF Mode, see the [[https://github
 
 ** External Links
 
-- [[https://tools.ietf.org/html/rfc5234][RFC 5234: Augmented BNF for Syntax Specifications: ABNF]]
 - [[https://en.wikipedia.org/wiki/Backus%E2%80%93Naur_form][Wikipedia: Backus–Naur form]]
+- [[https://www.ics.uci.edu/~pattis/ICS-33/lectures/ebnf.pdf][EBNF: A Notation to Describe Syntax]]
 
 ** License
 
